@@ -16,6 +16,8 @@ synaptic (0.62.2) unstable; urgency=low
   * gtk/rgmainwindow.cc:
     - fix "Gtk-CRITICAL **: gtk_tree_view_unref_tree_helper"
       assertion failure error (LP: #38397, closes: #341645)
+  * common/rpackageview.cc:
+    - add new "Missing Recommends" default filter
 
  --
 
